fixed track index, need discuss toolitip vs overflowing pics

--- a/app/assets/stylesheets/pages/_projects_index.scss
+++ b/app/assets/stylesheets/pages/_projects_index.scss
@@ -1,3 +1,8 @@
+// HEAD
+h1.project-name {
+  margin: 0;
+}
+
 .project-link {
   position: absolute;
   top: 0;
@@ -189,8 +194,4 @@ h3.main-title {
   &:hover {
     color: white;
   }
-}
-
-h1 project-name {
-  margin: 10px;
 }
